--- a/cyberproject/server/.env
+++ b/cyberproject/server/.env
@@ -6,3 +6,4 @@ DATABASE_NAME=chat_app
 COLLECTION_NAME=users
 ACCESS_TOKEN_EXPIRE_HOURS=1
 JWT_ALGORITHM=HS256
+N8N_WEBHOOK_URL=https://reneshh.app.n8n.cloud/webhook/send-otp
